--- a/Project1/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Project1/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -7,7 +7,7 @@ a.navbar-brand {
 }
 
 .tip {
-  height: 15px; 
+  height: 15px;
   width: 15px;
   border-radius: 4px;
   transform: translateY(-2px) rotate(45deg);
@@ -24,7 +24,7 @@ a.navbar-brand {
 .dp-menu[open] {
   position: absolute;
   display: flex;
-  flex-direction: column ;
+  flex-direction: column;
   align-items: center;
   transform: translateY(25px);
 }
@@ -39,12 +39,16 @@ a.navbar-brand {
   flex-direction: column;
   background-color: white;
   z-index: 1;
-  width: 100px;
+  width: max-content;
+  height: max-content;
+  max-height: 200px;
+  max-width: 300px;
   padding: 10px;
   border-radius: 20px;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  align-items: center;
 }
 
 .dropdown-content a {
@@ -64,7 +68,7 @@ a.navbar-brand {
   color: #ed254e;
 }
 
-.dropdown-content[close]{
+.dropdown-content[close] {
   display: none;
 }
 
