--- a/Project1/ClientApp/src/app/basic-modal/basic-modal.component.html
+++ b/Project1/ClientApp/src/app/basic-modal/basic-modal.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="modal-content">
     <div class="modal-header">
-      <h4>{{Title}}</h4>
+      <h4><strong>{{Title}}</strong></h4>
       <button id="close-modal" class="btn-close"></button>
     </div>
     <div class="modal-activity">
